--- a/StareMedic/App.xaml
+++ b/StareMedic/App.xaml
@@ -39,6 +39,19 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>
+
+            <Style x:Key="Editor" TargetType="Editor">
+
+                <Setter Property="TextColor" Value="#000"/>
+                <Style.Triggers>
+                    <Trigger TargetType="Editor" Property="IsFocused" Value="True">
+                        <Setter Property="BackgroundColor" Value="#7743DB" />
+                    </Trigger>
+                    <Trigger TargetType="Editor" Property="IsFocused" Value="False">
+                        <Setter Property="BackgroundColor" Value="#C3ACD0" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
             
             <Style x:Key="entryPhone" TargetType="Entry">
                 <Setter Property="FontSize" Value="Medium" />
