--- a/StareMedic/Views/Viewers/MedicControll.xaml
+++ b/StareMedic/Views/Viewers/MedicControll.xaml
@@ -16,71 +16,104 @@
         <Color x:Key="Black">#000</Color>
     </ContentPage.Resources>
     
-    <VerticalStackLayout 
-        Padding="20"
+    <Grid
+        RowDefinitions="Auto,*,*"
+        Padding="30"
         BackgroundColor="{StaticResource Secundario}">
         
 
 
         <!--Name & Phone cap-->
-        <Grid
-            ColumnDefinitions="*" 
-            RowDefinitions="*,*"
-            Padding="10">
-            <HorizontalStackLayout 
-                Grid.Column="0" 
-                Grid.Row="0" 
-                HorizontalOptions="StartAndExpand"
-                VerticalOptions="CenterAndExpand">
+        <HorizontalStackLayout
+            VerticalOptions="Start"
+            Grid.Row="0">
+            <Grid
+                ColumnDefinitions="*,*"
+                RowDefinitions="*,*">
 
                 <Label Text="Nombre:"
                        TextColor="{StaticResource Alter2}"
                        VerticalOptions="Center"
+                       HorizontalOptions="Center"
+                       Grid.Row="0"
+                       Grid.Column="0"
                        Style="{StaticResource labelEntry}"/>
                 <Entry x:Name="EntryName"
                        WidthRequest="800"
+                       Grid.Column="1"                     
+                       Grid.Row="0"
+                       Margin="30,0,30,0"
+                       VerticalOptions="CenterAndExpand"
+                       HorizontalOptions="CenterAndExpand"
                        Style="{StaticResource entryName}"
                        Placeholder="Nombre del Medico..."
                        TextChanged="EntryName_TextChanged"/>
+                <BoxView 
+                    Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    Style="{StaticResource BreakLine}"/>
+            </Grid>
+        </HorizontalStackLayout>
+        
+        <Grid
+            Grid.Row="1"
+            VerticalOptions="Start"
+            Padding="30"
+            ColumnDefinitions="Auto,*"
+            RowDefinitions="*">
 
-            </HorizontalStackLayout>
-            
-            <HorizontalStackLayout 
-                Grid.Column="0"
-                Grid.Row="1">
+            <Label Text="Telefono:"
+                   Grid.Column="0"
+                   VerticalOptions="Center"
+                   Style="{StaticResource labelEntry}"/>
+            <Entry x:Name="EntryTelefono"
+                   Grid.Column="1"
+                   Margin="30,0,30,0"
+                   VerticalOptions="Start"
+                   HorizontalOptions="Start"
+                   Style="{StaticResource entryPhone}"
+                   TextChanged="EntryTelefono_TextChanged"/>
 
-                <Label Text="Telefono:"
-                       Style="{StaticResource labelEntry}"/>
-                <Entry x:Name="EntryTelefono"
-                       VerticalOptions="Center"
-                       Style="{StaticResource entryPhone}"
-                       TextChanged="EntryTelefono_TextChanged"/>
-
-            </HorizontalStackLayout>
-            
-            <BoxView 
-                Style="{StaticResource BreakLine}" 
-                Grid.ColumnSpan="2" 
-                Grid.Row="1"/>
-
-
+                
         </Grid>
-
+            
+     
         <!--Confirm things-->
         <Grid 
-            ColumnDefinitions="*,*,*,*" 
-            HorizontalOptions="Start" 
+            Grid.Row="2"
+            VerticalOptions="EndAndExpand" 
+            Padding="20"
             Margin="10,0,0,0" 
-            ColumnSpacing="15">
+            ColumnSpacing="200">
 
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <BoxView 
+                Grid.Row="0"
+                Grid.ColumnSpan="4"
+                Style="{StaticResource BreakLine}"/>
+            
             <Button
                     x:Name="BtnCancel"
                     TextColor="{StaticResource Principal}"
                     BackgroundColor="{StaticResource Alter1}"
                     Clicked="BtnCancel_Clicked"
                     Text="Cancelar"
+                    WidthRequest="100"
+                    HeightRequest="50"
                     Grid.Column="0"
-                    HorizontalOptions="Center">
+                    Grid.Row="1"
+                    HorizontalOptions="Start">
 
                 <VisualStateManager.VisualStateGroups>
                     <VisualStateGroupList>
@@ -98,13 +131,43 @@
             </Button>
 
             <Button
+                x:Name="BtnCancel2"
+                Clicked="BtnCancel2_Clicked"
+                BackgroundColor="{StaticResource Alter1}"
+                TextColor="{StaticResource Principal}"
+                Text="Cancelar"
+                WidthRequest="100"
+                HeightRequest="50"
+                Grid.Column="0"
+                Grid.Row="1"
+                HorizontalOptions="Start"
+                IsVisible="false"
+                IsEnabled="False">
+
+                <VisualStateManager.VisualStateGroups>
+                    <VisualStateGroupList>
+                        <VisualStateGroup x:Name="CommonStates">
+                            <VisualState x:Name="Normal" />
+                            <VisualState x:Name="PointerOver">
+                                <VisualState.Setters>
+                                    <Setter Property="BackgroundColor" Value="LightGray" />
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateGroupList>
+                </VisualStateManager.VisualStateGroups>
+            </Button>
+
+            <Button
                     x:Name="BtnGuardar"
                     TextColor="{StaticResource Principal}"
                     BackgroundColor="{StaticResource Alter1}"
                     Clicked="BtnGuardar_Clicked"
-                    Text="Guardar:)"
+                    Text="Guardar"
+                    WidthRequest="100"
                     Grid.Column="1"
-                    HorizontalOptions="Center">
+                    Grid.Row="1"
+                    HorizontalOptions="Start">
 
                 <VisualStateManager.VisualStateGroups>
                     <VisualStateGroupList>
@@ -125,11 +188,13 @@
                 Text="Editar"
                 x:Name="BtnEdit"
                 Grid.Column="2"
+                Grid.Row="1"
+                WidthRequest="100"
+                HeightRequest="50"
                 TextColor="{StaticResource Principal}"
                 BackgroundColor="{StaticResource Alter1}"
                 Clicked="BtnEdit_Clicked"
-                VerticalOptions="Center"
-                HorizontalOptions="End"
+                HorizontalOptions="Start"
                 IsVisible="false"
                 IsEnabled="False">
 
@@ -152,11 +217,13 @@
                 Text="Eliminar"
                 x:Name="BtnDelete"
                 Grid.Column="3"
+                Grid.Row="1"
                 TextColor="{StaticResource Principal}"
                 BackgroundColor="{StaticResource Alter1}"
                 Clicked="BtnDelete_Clicked"
-                VerticalOptions="Center" 
-                HorizontalOptions="End"
+                HorizontalOptions="Start"
+                WidthRequest="100"
+                HeightRequest="50"
                 IsVisible="false"
                 IsEnabled="false">
 
@@ -175,5 +242,5 @@
 
             </Button>
         </Grid>
-    </VerticalStackLayout>
+    </Grid>
 </ContentPage>
