--- a/StareMedic/Views/Viewers/RoomControll.xaml
+++ b/StareMedic/Views/Viewers/RoomControll.xaml
@@ -16,33 +16,63 @@
         <Color x:Key="Black">#000</Color>
     </ContentPage.Resources>
     
-    <VerticalStackLayout 
+    <Grid
+        RowDefinitions="Auto,*,*"
         Padding="30"
         BackgroundColor="{StaticResource Secundario}">
         
 
 
         <!--NameCap-->
-        <HorizontalStackLayout>
-            <Label 
-                Text="Nombre:"
-                TextColor="{StaticResource Alter2}"
-                VerticalOptions="Center"
-                Style="{StaticResource labelEntry}"/>
-            <Entry 
-                x:Name="EntryName"
-                WidthRequest="800"
-                Margin="30,0,30,0"
-                Style="{StaticResource entryName}"
-                Placeholder="Nombre de la Habitacion..."
-                TextChanged="EntryName_TextChanged"/>
+        <HorizontalStackLayout
+            VerticalOptions="Start"
+            Grid.Row="0">
+
+            <Grid>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+
+                <Label 
+                    Text="Nombre:"
+                    TextColor="{StaticResource Alter2}"
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center"
+                    Grid.Column="0"
+                    Grid.Row="0"
+                    Style="{StaticResource labelEntry}"/>
+                <Entry 
+                    x:Name="EntryName"
+                    Grid.Column="1"
+                    Grid.Row="0"
+                    WidthRequest="800"
+                    Margin="30,0,30,0"
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="CenterAndExpand"
+                    Style="{StaticResource entryName}"
+                    Placeholder="Nombre de la Habitacion..."
+                    TextChanged="EntryName_TextChanged"/>
+
+                <BoxView 
+                    Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    Style="{StaticResource BreakLine}"/>
+
+            </Grid>
             
         </HorizontalStackLayout>
 
-        <BoxView Style="{StaticResource BreakLine}"/>
-
         <Grid
-            VerticalOptions="EndAndExpand"
+            Grid.Row="1"
+            VerticalOptions="Start"
             Padding="30">
 
             <Grid.ColumnDefinitions>
@@ -55,23 +85,20 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <HorizontalStackLayout 
-                HorizontalOptions="Start">
+            <HorizontalStackLayout>
 
                 <Label Text="Descripcion:"
                        Grid.Column="0"
                        VerticalOptions="Center"
-                       Grid.Row="1"
+                       Grid.Row="0"
                         Style="{StaticResource labelEntry}"/>
 
                 <Editor x:Name="EditorDescripcion"
                         Grid.Column="1"
                         Style="{StaticResource Editor}"
-                        Grid.Row="1"
+                        Grid.Row="0"
                         Margin="30,0,30,0"
                         BackgroundColor="{StaticResource Alter1}"
                         Placeholder="Descripcion..."
@@ -80,49 +107,51 @@
                         HorizontalOptions="FillAndExpand"
                         HorizontalTextAlignment="Start"
                         HeightRequest="100"
-                        WidthRequest="600"
+                        WidthRequest="725"
                         MaximumHeightRequest="100"
                         AutoSize="TextChanges">
 
                 </Editor>
             </HorizontalStackLayout>
-        </Grid>
-        <VerticalStackLayout 
-                Padding="30" 
-                BackgroundColor="{StaticResource Secundario}">
-            <!--confirm buttons-->
-            <Grid
-                VerticalOptions="EndAndExpand"
-                Padding="30">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
 
-                <Grid.ColumnDefinitions>
+            
+        </Grid>
+        <!--confirm buttons-->
+            <Grid
+                Grid.Row="2"
+                VerticalOptions="EndAndExpand"
+                Padding="20"
+                Margin="10,0,0,0" 
+                ColumnSpacing="200">
+
+
+            <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-            
-                <BoxView 
-                    Grid.Row="0"
-                    Grid.ColumnSpan="3"
-                    Style="{StaticResource BreakLine}"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
+            <BoxView 
+                Grid.Row="0"
+                Grid.ColumnSpan="4"
+                Style="{StaticResource BreakLine}"/>
 
-                <Button
+            <Button
                     x:Name="BtnCancel"
                     Clicked="BtnCancel_Clicked"
                     BackgroundColor="{StaticResource Alter1}"
                     TextColor="{StaticResource Principal}"
                     Text="Cancelar"
-                    WidthRequest="90"
+                    WidthRequest="100"
+                    HeightRequest="50"
                     Grid.Column="0"
-                    Grid.Row="3"
-                    VerticalOptions="FillAndExpand"
+                    Grid.Row="1"
                     HorizontalOptions="Start">
 
                     <VisualStateManager.VisualStateGroups>
@@ -140,16 +169,44 @@
                 </Button>
 
                 <Button
+                    x:Name="BtnCancel2"
+                    Clicked="BtnCancel2_Clicked"
+                    BackgroundColor="{StaticResource Alter1}"
+                    TextColor="{StaticResource Principal}"
+                    Text="Cancelar"
+                    WidthRequest="100"
+                    HeightRequest="50"
+                    Grid.Column="0"
+                    Grid.Row="1"
+                    HorizontalOptions="Start"
+                    IsVisible="false"
+                    IsEnabled="False">
+
+                    <VisualStateManager.VisualStateGroups>
+                        <VisualStateGroupList>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Property="BackgroundColor" Value="LightGray" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateGroupList>
+                    </VisualStateManager.VisualStateGroups>
+                </Button>
+
+
+            <Button
                     x:Name="BtnGuardar"
                     Clicked="BtnGuardar_Clicked"
                     TextColor="{StaticResource Principal}"
                     BackgroundColor="{StaticResource Alter1}"
                     Text="Guardar"
-                    WidthRequest="90"
+                    WidthRequest="100"
                     Grid.Column="1"
-                    Grid.Row="3"
-                    VerticalOptions="Start"
-                    HorizontalOptions="StartAndExpand">
+                    Grid.Row="1"
+                    HorizontalOptions="Start">
 
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroupList>
@@ -169,13 +226,13 @@
                     Text="Editar"
                     x:Name="BtnEdit"
                     Clicked="BtnEdit_Clicked"
-                    VerticalOptions="StartAndExpand"
-                    WidthRequest="90"
-                    HorizontalOptions="End"
+                    WidthRequest="100"
+                    HeightRequest="50"
+                    HorizontalOptions="Start"
                     TextColor="{StaticResource Principal}"
                     BackgroundColor="{StaticResource Alter1}"
                     Grid.Column="2"
-                    Grid.Row="3"
+                    Grid.Row="1"
                     IsVisible="false"
                     IsEnabled="False">
 
@@ -200,10 +257,10 @@
                     TextColor="{StaticResource Principal}"
                     BackgroundColor="{StaticResource Alter1}"
                     Grid.Column="3"
-                    Grid.Row="3"
-                    WidthRequest="90"
-                    VerticalOptions="StartAndExpand" 
-                    HorizontalOptions="End"
+                    Grid.Row="1"
+                    WidthRequest="100"
+                    HeightRequest="50"
+                    HorizontalOptions="Start"
                     IsVisible="false"
                     IsEnabled="False">
 
@@ -222,6 +279,6 @@
 
                 </Button>
             </Grid>
-        </VerticalStackLayout>
-    </VerticalStackLayout>
+        
+    </Grid>
 </ContentPage>
