Ready to merge w/ master: Contpaqi SDK implemented succesfully Resources path bug fixed DBcontext changed (_folioSDK) All settings moved to the config.json file.

--- a/StareMedic/Views/Viewers/ViewClinicalCase.xaml
+++ b/StareMedic/Views/Viewers/ViewClinicalCase.xaml
@@ -33,8 +33,17 @@
 
 
             <VerticalStackLayout class="DataStack">
-                <Label Text="ID: "
+                <HorizontalStackLayout>
+                    <Label Text="ID: "
                            x:Name="LblId"/>
+                    <Label Text="Sin Remision en Contpaqi"
+                           x:Name="LblFolioSDK"
+                           TextColor="DarkRed"/>
+                    <Button Text="Enviar"
+                            x:Name="BtnSendSDK"
+                            Clicked="BtnSendSDK_Clicked"/>
+                </HorizontalStackLayout>
+                
                 <!--Name CC & patient-->
                 <HorizontalStackLayout>
                     <Label Text="Caso: "/>
