--- a/StareMedic/MainPage.xaml
+++ b/StareMedic/MainPage.xaml
@@ -11,15 +11,7 @@
         <Color x:Key="Black">#000</Color>
 
 
-        <Style x:Key="RoundedBorderStyle" TargetType="Border">
-            <Setter Property="Stroke" Value="#7743DB" />
-            <Setter Property="StrokeThickness" Value="2" />
-            <Setter Property="WidthRequest" Value="300"/>
-            <Setter Property="HorizontalOptions" Value="Center"/>
-            <Setter Property="VerticalOptions" Value="Center"/>
-            <Setter Property="StrokeShape" Value="RoundRectangle 30,30,30,30" />
-            <Setter Property="HeightRequest" Value="100"/>
-        </Style>
+        
         
     </ContentPage.Resources>
 
@@ -194,13 +186,13 @@
                     </VisualStateManager.VisualStateGroups>
 
                     <Image Grid.Column="0"
-                       Source="rooms.png"
+                       Source="search_cc.png"
                        Aspect="AspectFit"
                        HeightRequest="50"
                        VerticalOptions="Center"
                        HorizontalOptions="Center"/>
                     <Label Grid.Column="1"
-                       Text="Habitaciones"
+                       Text="Consultar Admisiones"
                        FontSize="Subtitle"
                        FontFamily="OpenSansRegular"
                        TextColor="{StaticResource Black}"
@@ -209,7 +201,7 @@
                     </Label>
 
                     <Grid.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="BtnRooms_Clicked"/>
+                        <TapGestureRecognizer Tapped="BtnSearchCC_Clicked"/>
                     </Grid.GestureRecognizers>
 
                 </Grid>
