Optimizing listing and searching but stilll ugly waiting for frontend, implemented search by medic on search cc

--- a/StareMedic/Views/Pacientes.xaml
+++ b/StareMedic/Views/Pacientes.xaml
@@ -18,10 +18,12 @@
     
     <Grid 
         ColumnDefinitions="2*,*" 
+        RowDefinitions="9*,*"
         BackgroundColor="{StaticResource Secundario}">
 
         <ListView
             Grid.Column="0"
+            Grid.Row="0"
             x:Name="listPatients"
             BackgroundColor="{StaticResource Alter1}"
             Style="{StaticResource listviewShowEntity}"
@@ -73,11 +75,23 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <HorizontalStackLayout Grid.Column="0"
+                               Grid.Row="1"
+                               HorizontalOptions="End">
+            <Button Text="&lt;"
+                    x:Name="BtnPrevListPage"
+                    Clicked="BtnPrevListPage_Clicked"/>
+            <Button Text=">"
+                    x:Name="BtnNextListPage"
+                    Clicked="BtnNextListPage_Clicked"/>
 
+        </HorizontalStackLayout>
         <Grid  
               Padding="10" 
               ColumnSpacing="-40"
-              Grid.Column="1">
+              Grid.Column="1"
+              Grid.Row="0"
+              Grid.RowSpan="2">
 
             <!-- Fila 0: SearchBar -->
             <Grid.RowDefinitions>
